Fix routing with nested routes, add AddShift.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -14,6 +14,11 @@
     transform: translate(-50%, -50%);
 }
 
+.centerTable {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 button {
     border-radius: 8px;
     border: 1px solid transparent;
